--- a/WPF Webcam/UI/MainWindow.xaml
+++ b/WPF Webcam/UI/MainWindow.xaml
@@ -2,9 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
-    Title="WPF Webcam" Height="800" Width="1500" Loaded="Window_Loaded">
-    <Grid>
-        <cam:Webcam Name="WebCamCtrl" Margin="120,8,1072,523"  Background="#FFCBCBCB" BorderBrush="#FF3C3C3C" BorderThickness="2"/>
+    Title="WPF Webcam" Height="800" Width="1500" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+    <Viewbox>
+        <Grid>
+        <cam:Webcam Name="WebCamCtrl" Margin="120,8,1079,537"  Background="#FFCBCBCB" BorderBrush="#FF3C3C3C" BorderThickness="2"/>
         <ComboBox Height="22" HorizontalAlignment="Left" Margin="104,269,0,0" Name="VidDvcsComboBox" VerticalAlignment="Top" Width="210" Visibility="Hidden" />
         <ComboBox Visibility="Hidden" Height="23" HorizontalAlignment="Left" Margin="105,302,0,0" Name="AudDvcsComboBox" VerticalAlignment="Top" Width="209" />
         <Button Visibility="Hidden" Content="Start Recording" Height="24" HorizontalAlignment="Left" Margin="51,380,0,0" Name="RecordButton" VerticalAlignment="Top" Width="115" Click="RecordButton_Click" />
@@ -16,7 +17,7 @@
         <ScrollViewer Name="sclPh" Margin="420,40,0,544" CanContentScroll="True" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Hidden" >
             <StackPanel OverridesDefaultStyle="True" CanHorizontallyScroll="True" CanVerticallyScroll="True" Orientation="Horizontal"  Name="spPhotos" HorizontalAlignment="Left" Height="186" VerticalAlignment="Top" Width="1072" Background="#FFE8E8E8"/>
         </ScrollViewer>
-        <Canvas Margin="0,0,1377,518" Background="#FFB9B7B7">
+        <Canvas Margin="0,0,1389,538" Background="#FF878787">
             <Border Name="bdrCapture" Visibility="Visible" BorderBrush="Black" BorderThickness="0" Height="71" Canvas.Top="106" Width="78" CornerRadius="10" Canvas.Left="10">
                 <Border.Style>
                     <Style TargetType="Border">
@@ -45,10 +46,10 @@
                 <Canvas >
                     <Button Name="btnCapture"  BorderThickness="0" Height="60" Width="78" Click="SnapshotButton_Click" >
                         <Button.Background>
-                            <ImageBrush ImageSource="Images/iconcamera.png"/>
+                            <ImageBrush ImageSource="/KrausGra;component/Images/iconcamera.png"/>
                         </Button.Background>
                         <Button.Foreground>
-                            <ImageBrush ImageSource="Images/iconcamera.png"/>
+                            <ImageBrush ImageSource="/KrausGra;component/Images/iconcamera.png"/>
                         </Button.Foreground>
                     </Button>
                     <TextBlock x:Name="tbkCapture" Text="Capture" TextAlignment="Center" Height="16" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White"/>
@@ -82,10 +83,10 @@
                 <Canvas >
                     <Button Name="btnStartCapture" BorderThickness="0" Height="60" Width="78" Click="btnStartCapture_Click"  >
                         <Button.Background>
-                            <ImageBrush ImageSource="Images/iconplay.png"/>
+                            <ImageBrush ImageSource="/KrausGra;component/Images/iconplay.png"/>
                         </Button.Background>
                         <Button.Foreground>
-                            <ImageBrush ImageSource="Images/iconplay.png"/>
+                            <ImageBrush ImageSource="/KrausGra;component/Images/iconplay.png"/>
                         </Button.Foreground>
                     </Button>
                     <TextBlock x:Name="tbkStartCapture" Text="Start Camera" HorizontalAlignment="Center" Height="16" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White"/>
@@ -119,10 +120,10 @@
                 <Canvas  >
                     <Button Name="btnStop" BorderThickness="0" Height="60" Width="78" Click="btnStop_Click">
                         <Button.Background>
-                            <ImageBrush ImageSource="Images/Stopicon.png"/>
+                            <ImageBrush ImageSource="/KrausGra;component/Images/Stopicon.png"/>
                         </Button.Background>
                         <Button.Foreground>
-                            <ImageBrush ImageSource="Images/Stopicon.png"/>
+                            <ImageBrush ImageSource="/KrausGra;component/Images/Stopicon.png"/>
                         </Button.Foreground>
                     </Button>
                     <TextBlock x:Name="tbkStop" Text="Stop Camera" HorizontalAlignment="Center" Height="16" Width="74" Canvas.Left="4" Canvas.Top="56" Foreground="White"/>
@@ -130,4 +131,5 @@
             </Border>
         </Canvas>
     </Grid>
+    </Viewbox>
 </Window>
