--- a/KrausGRA/App.xaml
+++ b/KrausGRA/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="KrausGRA.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="UI/MainWindow.xaml">
+             StartupUri="UI/wndBoxInformation.xaml">
     <Application.Resources>
+        <!--UI styles -->
         <Style x:Key="TextMenu" TargetType="TextBlock">
             <Setter Property="FontSize" Value="17"/>
             <Setter Property="FontFamily" Value="Arial"/>
@@ -40,5 +41,38 @@
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="FontFamily" Value="Arial"/>
         </Style>
+        <!--  _________________________ -->
+        
+        <!-- Trigges -->
+        <!-- 1 -->
+        <Style x:Key="trgBorderHideShow0" TargetType="Border">
+            <Style.Triggers >
+                <Trigger Property="Border.Visibility" Value="Visible">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard >
+                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-500" To="0"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        
+        <!-- 2-->
+        <Style x:Key="trgBorderHideShowTO390" TargetType="Border">
+            <Style.Triggers >
+                <Trigger Property="Border.Visibility" Value="Visible">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard >
+                                <DoubleAnimation Storyboard.TargetProperty="(Canvas.Left)" Duration="0:0:0.5" From="-500" To="190"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <!--  _________________________ -->
     </Application.Resources>
 </Application>
