--- a/KrausGRA/UI/wndBoxInformation.xaml
+++ b/KrausGRA/UI/wndBoxInformation.xaml
@@ -35,7 +35,7 @@
                             <Button x:Name="btnPCKNumber" Style="{StaticResource win8btn}" Content="Scan - Packing Number" Margin="-1,-1,-1,1"/>
                         </Border>
                         <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="16" Canvas.Top="195" Width="305" Background="#FF8323C5">
-                            <Button x:Name="btnBoxNumber" Style="{StaticResource win8btn}" Content="Scan - Box Number" Margin="-1,-1,-1,1"/>
+                            <Button x:Name="btnBoxNumber" Style="{StaticResource win8btn}" Content="Scan - Box Number" Margin="-1,-1,-1,1" Click="btnBoxNumber_Click"/>
                         </Border>
                         <Border Style="{StaticResource bdrWin8btn}" BorderThickness="1" Height="80" Canvas.Left="15" Canvas.Top="287" Width="305" Background="#FF008F34">
                             <Button x:Name="btnShipmentNumber" Style="{StaticResource win8btn}" Content="Scan - Shipment Number" Margin="-1,-1,-1,1"/>
