--- a/KrausGRA/UI/MainWindow.xaml
+++ b/KrausGRA/UI/MainWindow.xaml
@@ -2,9 +2,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
-    Title="WPF Webcam" Height="800" Width="1200" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" WindowState="Maximized">
-    <Grid>
-        <Canvas Margin="0,-5,0,5">
+    Title="WPF Webcam" Height="770" Width="1400" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+    <Viewbox Margin="0,0,2,-1">
+        <Canvas  Height="790" Width="1400" >
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF308EAA" Offset="0"/>
@@ -111,7 +111,7 @@
                 <Image x:Name="imgLogo" Height="100" Canvas.Left="-1" Canvas.Top="-3" Width="258" Stretch="Fill" Cursor="None" Source="/KrausGra;component/Images/logo.png"/>
                 <TextBlock x:Name="tbProjectTitle" Canvas.Left="335" TextWrapping="Wrap" Text="GRA Manager" Canvas.Top="27" Height="46" Width="424" FontSize="30"/>
             </Canvas>
-            <Border x:Name="bdrCamera" Canvas.Left="-1490" Visibility="Hidden" Canvas.Top="302" >
+            <Border x:Name="bdrCamera" Visibility="Hidden" Canvas.Top="291" >
                 <Border.Style>
                     <Style TargetType="{x:Type Border}">
                         <Style.Triggers>
@@ -136,7 +136,7 @@
                         </Style.Triggers>
                     </Style>
                 </Border.Style>
-                <Canvas x:Name="cnCamera" Height="248" Width="1510" Visibility="Visible"  Background="#B2323232" >
+                <Canvas x:Name="cnCamera" Height="244" Width="1310" Visibility="Visible"  Background="#B2323232" >
                     <cam:Webcam x:Name="WebCamCtrl"  Background="#FF3A3939" BorderBrush="#FF3C3C3C" BorderThickness="2" Height="232" Canvas.Left="120" Canvas.Top="8" Width="286"/>
                     <Border x:Name="bdrStop" Visibility="Visible" BorderBrush="Black" BorderThickness="0" Height="71" Canvas.Top="42" Width="78" CornerRadius="10" Canvas.Left="-98">
                         <Border.Style>
@@ -251,11 +251,11 @@
                             </Canvas>
                         </Border>
                     </Canvas>
-                    <ScrollViewer x:Name="sclPh" CanContentScroll="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" Canvas.Left="416" Canvas.Top="24" Width="1022" >
-                        <StackPanel OverridesDefaultStyle="True" CanHorizontallyScroll="True" CanVerticallyScroll="True" Orientation="Horizontal"  x:Name="spPhotos" HorizontalAlignment="Left" Height="186" VerticalAlignment="Top" Width="1022"/>
+                    <ScrollViewer x:Name="sclPh" CanContentScroll="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden" Canvas.Left="416" Canvas.Top="24" Width="829" >
+                        <StackPanel OverridesDefaultStyle="True" CanHorizontallyScroll="True" CanVerticallyScroll="True" Orientation="Horizontal"  x:Name="spPhotos" HorizontalAlignment="Left" Height="186" VerticalAlignment="Top" Width="829"/>
                     </ScrollViewer>
-                    <Button Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" x:Name="brnCloseCamera" Content="Close Camera" Canvas.Left="1354" 
-        				Canvas.Top="91" Width="246" Height="65"
+                    <Button Style="{StaticResource ResourceKey={x:Static ToolBar.ButtonStyleKey}}" x:Name="brnCloseCamera" Content="Close Camera" Canvas.Left="1155" 
+        				Canvas.Top="93" Width="246" Height="62"
         				RenderTransformOrigin="0.5,0.5" Background="#FFE07D1A" Foreground="White"
         				HorizontalAlignment="Right" FontSize="17" FontWeight="Bold" Click="brnCloseCamera_Click">
                         <Button.RenderTransform>
@@ -270,5 +270,6 @@
                 </Canvas>
             </Border>
         </Canvas>
-    </Grid>
+
+    </Viewbox>
 </Window>
