--- a/KrausGRA/UI/MainWindow.xaml
+++ b/KrausGRA/UI/MainWindow.xaml
@@ -2,9 +2,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cam="clr-namespace:WebcamControl;assembly=WebcamControl"
-    Title="WPF Webcam" Height="770" Width="1400" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" WindowState="Maximized">
-    <Viewbox Margin="0,0,2,-1">
-        <Canvas  Height="790" Width="1400" >
+    Title="WPF Webcam" Height="770" Width="1300" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+
+    <Window.Resources>
+        <Style x:Key="lblConstant" TargetType="Label">
+            <Setter Property="FontFamily" Value="Arial"/>
+            <Setter Property="FontSize" Value="20"/>
+        </Style>
+    </Window.Resources>
+    <Viewbox Margin="0,0,0,0">
+        <Canvas  Height="780" Width="1360" >
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FF308EAA" Offset="0"/>
@@ -12,21 +19,18 @@
                     <GradientStop Color="#FFDEE8EA" Offset="1"/>
                 </LinearGradientBrush>
             </Canvas.Background>
-            <Canvas x:Name="cnMainArea" Height="625" Width="1024" Canvas.Left="158" Canvas.Top="145">
-                <Canvas Name="cnPackageInfo" Height="93" Canvas.Top="45" Width="1024" Background="#33000000">
-                    <TextBlock Style="{StaticResource TextMenu}" Canvas.Left="1" TextWrapping="Wrap" Text="Package Information" Canvas.Top="4"/>
-                </Canvas>
-                <Border Style="{StaticResource ResourceKey=bdrTextBox}" BorderBrush="Black" BorderThickness="1" Height="30" Canvas.Left="111" Canvas.Top="10" Width="204">
+            <Canvas x:Name="cnMainArea" Height="625" Width="1360" Canvas.Top="145">
+                <Border Style="{StaticResource ResourceKey=bdrTextBox}" BorderBrush="Black" BorderThickness="1" Height="30" Canvas.Left="1031" Canvas.Top="8" Width="204">
                     <TextBox x:Name="txtBoxNumber" Style="{StaticResource ResourceKey=TxtMain}" TextWrapping="Wrap" />
                 </Border>
-                <TextBlock Style="{StaticResource ResourceKey=TextRegular}" Canvas.Left="10" TextWrapping="Wrap" Text="Box Number :" Canvas.Top="17" Width="101"/>
-                <Border Name="bdrPackageDg" Canvas.Top="138">
+                <TextBlock Style="{StaticResource ResourceKey=TextRegular}" Canvas.Left="930" TextWrapping="Wrap" Text="Box Number :" Canvas.Top="14" Width="101"/>
+                <Border Name="bdrPackageDg" Canvas.Top="308" Width="801" Height="317">
                     <DataGrid  x:Name="dgPackageInfo" SelectionMode="Extended" 
-            			ItemsSource="{Binding}" HorizontalAlignment="Center" Height="482" VerticalAlignment="Center" Width="1024" 
+            			ItemsSource="{Binding}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="801" 
             			ScrollViewer.CanContentScroll="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
             			CanUserAddRows="False"    AutoGenerateColumns="False" FontSize="17" Canvas.Top="136" Background="#FFFBFBFB"
             			SelectionUnit="Cell" BorderThickness="1" Cursor="Hand"   
-            			BorderBrush="Black"  HorizontalGridLinesBrush="#FF575757" VerticalGridLinesBrush="Gray" 
+            			BorderBrush="Black"  HorizontalGridLinesBrush="#FF575757" VerticalGridLinesBrush="Gray" Height="307" Margin="0,5" 
                            >
                         <DataGrid.Resources>
                             <Style x:Key="ErrorStyle" TargetType="{x:Type TextBox}">
@@ -94,17 +98,23 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </Border>
+                <Border BorderBrush="Black" BorderThickness="1" Height="256" Canvas.Top="47" Width="801" CornerRadius="20" Background="#7F323232">
+                    <Canvas x:Name="cnPackageInfo" Margin="-1">
+                        <Label Name="lblSRNo" Content="SR Number :" Canvas.Left="22" Canvas.Top="10" Style="{StaticResource lblConstant}"/>
+                        <TextBlock Style="{StaticResource TextMenu}" Canvas.Left="503" TextWrapping="Wrap" Text="Package Information" Canvas.Top="10"/>
+                    </Canvas>
+                </Border>
             </Canvas>
             <ComboBox Height="22" HorizontalAlignment="Left" Margin="104,269,0,0" x:Name="VidDvcsComboBox" VerticalAlignment="Top" Width="210" Visibility="Hidden" />
             <ComboBox Visibility="Hidden" Height="23" HorizontalAlignment="Left" Margin="105,302,0,0" x:Name="AudDvcsComboBox" VerticalAlignment="Top" Width="209" />
-            <Border BorderBrush="Black" BorderThickness="1" Height="625" Canvas.Left="3" Canvas.Top="145" Width="150" CornerRadius="10" Background="#CC6C8FA8">
-                <Canvas>
-                    <Button x:Name="btnOpenCamera" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"  Content="" Canvas.Left="18" Width="95" Height="88" Canvas.Top="46" BorderBrush="{x:Null}" BorderThickness="0" Click="btnOpenCamera_Click" >
+            <Border BorderThickness="0" Height="124" Canvas.Left="1221" Canvas.Top="11" Width="129" CornerRadius="10">
+                <Canvas Margin="0,0,26,0">
+                    <Button x:Name="btnOpenCamera" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"  Content="" Canvas.Left="10" Width="95" Height="88" BorderBrush="{x:Null}" BorderThickness="0" Click="btnOpenCamera_Click" >
                         <Button.Background>
                             <ImageBrush ImageSource="/KrausGra;component/Images/Camera Folder.png"/>
                         </Button.Background>
                     </Button>
-                    <TextBlock Canvas.Left="7" Style="{StaticResource TextMenu}" TextWrapping="Wrap" Text="Open Camera" Canvas.Top="136" Width="123"/>
+                    <TextBlock Canvas.Left="-1" Style="{StaticResource TextMenu}" TextWrapping="Wrap" Text="Open Camera" Canvas.Top="90" Width="123"/>
                 </Canvas>
             </Border>
             <Canvas x:Name="cnTitle" Height="100" Canvas.Left="3" Canvas.Top="11" Width="1187">
